# fullcli-baremetal-xilinx-project

./: .gitignore  README.md
project/: CMakeLists.txt
scripts/: build.sh  clean.sh  clean_platform.sh  flash.sh  platform.sh
scripts/tcl/: flash.tcl  platform.tcl
source/: helloworld.c  lscript.ld
